--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,14 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.room:room-runtime:2.5.1'
+    kapt 'androidx.room:room-compiler:2.5.1'
+    implementation "androidx.room:room-ktx:2.4.2"
+
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:chromecast-sender:0.28'
+
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     implementation "androidx.activity:activity-ktx:1.7.0"
 
