--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,9 @@ android {
 dependencies {
     implementation 'androidx.room:room-runtime:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
-    implementation "androidx.room:room-ktx:2.4.2"
+    implementation "androidx.room:room-ktx:2.5.1"
 
+    implementation "androidx.core:core-splashscreen:1.0.0"
 
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:chromecast-sender:0.28'
 
